<resources>
    <string name="app_name">Boreas</string>
    <string name="reg_actname">Register</string>
    <string name="reg_name">Full Name</string>
    <string name="reg_idname">Unique User ID</string>
    <string name="reg_idname_desc">A unique mix of letters and numbers others can use to identify you with</string>
    <string name="reg_locations">Where can you be found?</string>
    <string name="reg_locateme">Locate Me</string>
    <string name="reg_nolocsmsg">Can make it easier to send messages to you</string>
    <string name="reg_complete">REGISTER</string>
    <string name="reg_error">Error in registering...</string>
    <string name="reg_error_unfilled">All fields must be filled</string>
    <string name="reg_error_passwords_dont_match">Provided passwords do not match</string>
    <string name="reg_error_hashing_password">Error with the password or something</string>>

    <string name="chat_menutitle">Chat Menu</string>
    <string name="title_activity_wdtest">WDTest</string>
    <string name="title_activity_group_chat">GroupChatActivity</string>

    <string name="title_localchat">Local Chat</string>

    <string name="button_bluetooth">Bluetooth</string>
    <string name="button_radio">Radio</string>
    <string name="button_wifi">Wi-Fi</string>

    <string name="service_id">borasconnectiontest</string>
    <string name="help">Help</string>
    <string name="groupChat">Group Chat</string>

    <string name="logout">Logout</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="development_under_process">Development under process</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_location_permission" />
    <string name="text_location_permission" />
    <string name="ok" />
    <string name="msg_token_fmt" />
    <string name="title_activity_settings">SettingsActivity</string>
    <string name="login_message_on_signup"><font color="#1b2d45">Already have an account?</font> <font
        color="#00ebc7"><b>Log In</b></font></string>
    <string name="signup_message_on_login"><font color="#1b2d45">Don\'t have an account?</font> <font
        color="#00ebc7"><b>Sign Up</b></font></string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="username">Username</string>
    <string name="location">Location</string>
</resources>
