<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context=".ViewFragments.OfflineGroupFragment"
    tools:showIn="@layout/activity_chat">

    <!-- Top section: transmit mode options -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone"
        android:orientation="horizontal">

        <Button
            android:id="@+id/chat_button_bluetooth"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rect_round_green"
            android:text="@string/button_bluetooth"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/chat_button_radio"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rect_round_green"
            android:text="@string/button_radio"
            android:textColor="@color/white" />

        <Button
            android:id="@+id/chat_button_wifi"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_margin="3dp"
            android:layout_weight="1"
            android:background="@drawable/rect_round_green"
            android:text="@string/button_wifi"
            android:textColor="@color/white" />

    </LinearLayout>

    <Space
        android:layout_width="match_parent"
        android:layout_height="10dp" />

    <ListView
        android:id="@+id/chat_textarea"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:dividerHeight="0dp"
        android:divider="@null"
        android:layout_weight="2" />

    <!-- Message text area and send button -->
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginLeft="5dp"
        android:layout_marginRight="55dp"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="10dp"
        android:background="@drawable/rect_round">

        <EditText
            android:id="@+id/chat_messagetext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@android:color/transparent"
            android:hint="Type a Message" />

        <Button
            android:id="@+id/send_offline_group_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/rect_round_green"
            android:text="SEND"
            android:textColor="@color/white" />

    </LinearLayout>

</LinearLayout>